# Intelligent-Approval-Management-System

./: README.md
ai-service-python/: README.md  pyproject.toml
ai-service-python/app/: main.py
ai-service-python/app/agents/: default_agent.py
ai-service-python/app/api/v1/: chat_api.py
ai-service-python/app/config/: config.yaml
ai-service-python/app/context/: context_handler.py
ai-service-python/app/core/: security.py
ai-service-python/app/middleware/: agent_middleware.py
ai-service-python/app/resources/prompt/: default_sys_prompt.txt
ai-service-python/app/resources/schema/: ai-service.db
ai-service-python/app/schemas/: chat_param.py
ai-service-python/app/tools/: agent_tool.py
ai-service-python/app/utils/: beanFactory_handler.py  configfile_handler.py  logger_handler.py  path_handler.py  prompt_handler.py
backend-java/: .gitignore  pom.xml
backend-java/src/main/resources/: application.yaml
backend-java/src/main/resources/mapper/: LeaveApprovalMapper.xml  (+1 more)
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: components.d.ts  main.js
frontend/src/api/: ai.js  approval.js  login.js
frontend/src/components/: AiAssistant.vue  DialogForm.vue  IamsTable.vue  Pagination.vue
frontend/src/router/: index.js
frontend/src/stores/: menu.js  user.js
frontend/src/utils/: echarts.js  request.js
frontend/src/views/home/: HomePage.vue
frontend/src/views/layout/: LayoutPage.vue
frontend/src/views/login/: LoginPage.vue
frontend/src/views/work_order/: ApplyPage.vue  ApprovePage.vue  MyApplyPage.vue
(+40 files in other folders)
