[project]
name = "ai-service-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dashscope>=1.25.18",
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "uvicorn>=0.47.0",
]
